_etc/006.grafana-ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: grafana-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
  - websecure
#  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/api/grafana`) && Host(`console.tmaxcloud.org`)
    priority: 100                      
    services:
    - kind: Service
      name: grafana
      namespace: monitoring
      port: 3000
      scheme: http
  tls: {}
    # secretName: api-gateway-server-tls
    # tls: {}
